fix bugs when starting hadoop