@@ -428,3 +428,7 @@ export HADOOP_OS_TYPE=${HADOOP_OS_TYPE:-$(uname -s)}
 # By default, Hadoop uses jsvc which needs to know to launch a
 # server jvm.
 # export HADOOP_REGISTRYDNS_SECURE_EXTRA_OPTS="-jvm server"
+
+
+# Zhongbo added on 2023/3/20
+export HADOOP_OPTS="${HADOOP_OPTS} --add-modules java.activation"
